--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,8 @@
 .Rhistory
 .Rapp.history
 
-# Session Data files
-.RData
-
-# User-specific files
-.Ruserdata
-
 # Example code in package build process
 *-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
 
 # RStudio files
 .Rproj.user/
@@ -26,14 +14,14 @@ vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
+.Rproj.user
 
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
+# .DS_Store
+.DS_Store
 
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
+# Other
+.gitattributes
+*.pdf
+*.xlsx
+*.rds
+.RData
